--- a/src/stylesheets/portal.scss
+++ b/src/stylesheets/portal.scss
@@ -6,6 +6,20 @@ div.portal {
 
   header {
     height: 208px;
+
+    h1 {
+      height: 100%;
+      position: relative;
+
+      img {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: auto;
+      }
+    }
   }
 
   div.portal-bookmarklet-link {
