--- a/src/stylesheets/portal.scss
+++ b/src/stylesheets/portal.scss
@@ -1,6 +1,6 @@
 div.portal {
   $light-gray: #f0f0f0;
-  $dark-gray: #787878;
+  $dark-gray: #4a4a4a;
   $yellow: #cf0;
   $font-size-l: 24px;
   $font-size-m: 18px;
