--- a/src/stylesheets/portal.scss
+++ b/src/stylesheets/portal.scss
@@ -4,10 +4,12 @@ div.portal {
   $yellow: #cf0;
   $font-size-l: 24px;
   $font-size-m: 18px;
+  $font-size-s: 14px;
+  $font-size-code: 13px;
+  $min-width: 960px;
   background: $light-gray;
   width: 100%;
-  height: 100%;
-  min-width: 960px;
+  min-width: $min-width;
 
   header {
     height: 208px;
@@ -87,6 +89,71 @@ div.portal {
         div.inner-wrapper {
           height: $height - $padding-mouse-over * 2;
           padding: $padding-mouse-over-inner-wrapper 0;
+        }
+      }
+    }
+  }
+
+  div.portal-demo {
+    width: $min-width;
+    color: $dark-gray;
+    margin: 0 auto;
+
+    h1 {
+      font-size: $font-size-l;
+      text-align: center;
+      margin: 58px 0;
+
+      span {
+        position: relative;
+        z-index: 0;
+
+        &::before {
+          $diameter: 72px;
+          content: '';
+          position: absolute;
+          top: -$font-size-l;
+          left: -$font-size-l;
+          width: $diameter;
+          height: $diameter;
+          border-radius: $diameter;
+          background: $yellow;
+          z-index: -1;
+        }
+      }
+    }
+
+    p {
+      font-size: $font-size-s;
+
+      &.align-c {
+        text-align: center;
+      }
+    }
+
+    div.sample {
+      background: $dark-gray;
+      color: $light-gray;
+      margin: 16px 0 28px;
+      padding: 16px 24px;
+      border-radius: 10px;
+
+      p.column {
+        display: inline-block;
+        vertical-align: middle;
+
+        &:not(:last-child) {
+          margin: 0 36px 0 0;
+        }
+
+        code {
+          font-family: 'Courier New';
+          font-size: $font-size-code;
+
+          span {
+            color: $yellow;
+            font-weight: bold;
+          }
         }
       }
     }
