--- a/src/stylesheets/portal.scss
+++ b/src/stylesheets/portal.scss
@@ -44,7 +44,7 @@ div.portal {
       height: $height;
       text-align: center;
       padding: $padding-mouse-out;
-      transition: all .1s ease-in-out 0s;
+      transition: color, padding .1s ease-in-out 0s;
 
       div.inner-wrapper {
         height: $height - $padding-mouse-out * 2;
