--- a/src/stylesheets/portal.scss
+++ b/src/stylesheets/portal.scss
@@ -29,136 +29,6 @@ div.portal {
     }
   }
 
-  a.portal-bookmarklet-link {
-    display: block;
-
-    div.outer-wrapper {
-      $height: 360px;
-      $border-width: 8px;
-      $padding-mouse-out: 12px;
-      $padding-mouse-over: $padding-mouse-out + $border-width;
-      $padding-mouse-out-inner-wrapper: 40px;
-      $padding-mouse-over-inner-wrapper: $padding-mouse-out-inner-wrapper - $border-width;
-      background: $dark-gray;
-      color: $light-gray;
-      height: $height;
-      text-align: center;
-      padding: $padding-mouse-out;
-      transition: color, padding .1s ease-in-out 0s;
-
-      div.inner-wrapper {
-        height: $height - $padding-mouse-out * 2;
-        border: $border-width solid;
-        padding: $padding-mouse-out-inner-wrapper 0;
-        border-radius: 20px;
-        transition: all .1s ease-in-out 0s;
-
-        & > *:not(:first-child) {
-
-          h1 {
-            margin-top: 36px;
-          }
-        }
-
-        h1 {
-          font-size: $font-size-l;
-          margin: 0 0 12px;
-          position: relative;
-
-          &::after {
-            content: '';
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 38px;
-            margin: 0 auto;
-            width: 688px;
-            border-bottom: 2px solid;
-          }
-        }
-
-        p {
-          font-size: $font-size-m;
-        }
-      }
-
-      &:hover {
-        color: $yellow;
-        padding: $padding-mouse-over;
-
-        div.inner-wrapper {
-          height: $height - $padding-mouse-over * 2;
-          padding: $padding-mouse-over-inner-wrapper 0;
-        }
-      }
-    }
-  }
-
-  div.portal-demo {
-    width: $min-width;
-    color: $dark-gray;
-    margin: 0 auto;
-
-    h1 {
-      font-size: $font-size-l;
-      text-align: center;
-      margin: 58px 0;
-
-      span {
-        position: relative;
-        z-index: 0;
-
-        &::before {
-          $diameter: 72px;
-          content: '';
-          position: absolute;
-          top: -$font-size-l;
-          left: -$font-size-l;
-          width: $diameter;
-          height: $diameter;
-          border-radius: $diameter;
-          background: $yellow;
-          z-index: -1;
-        }
-      }
-    }
-
-    p {
-      font-size: $font-size-s;
-
-      &.align-c {
-        text-align: center;
-      }
-    }
-
-    div.sample {
-      background: $dark-gray;
-      color: $light-gray;
-      margin: 16px 0 28px;
-      padding: 16px 24px;
-      border-radius: 10px;
-
-      p.column {
-        display: inline-block;
-        vertical-align: middle;
-
-        &:not(:last-child) {
-          margin: 0 64px 0 0;
-        }
-
-        code {
-          font-family: 'Courier New';
-          font-size: $font-size-code;
-
-          span {
-            color: $yellow;
-            font-weight: bold;
-          }
-        }
-      }
-    }
-  }
-
   footer {
     width: $min-width;
     color: $dark-gray;
@@ -167,4 +37,7 @@ div.portal {
     font-size: $font-size-s;
     text-align: center;
   }
+
+  @import './bookmarklet-link';
+  @import './demo';
 }
