Fix the text in the demo component

--- a/src/stylesheets/demo.scss
+++ b/src/stylesheets/demo.scss
@@ -35,6 +35,10 @@ div.portal-demo {
     }
   }
 
+  a {
+    text-decoration: underline;
+  }
+
   div.sample {
     background: $dark-gray;
     color: $light-gray;
