Adjust the spaces

--- a/src/stylesheets/demo.scss
+++ b/src/stylesheets/demo.scss
@@ -6,7 +6,7 @@ div.portal-demo {
   h1 {
     font-size: $font-size-l;
     text-align: center;
-    margin: 58px 0;
+    margin: 87px 0 58px;
 
     span {
       position: relative;
